<resources>
    <string name="app_name">AreTech</string>
    <string name="str_skip">Keç</string>
    <string name="str_next">Növbəti</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Login</string>
    <string name="text_signin_message">Xoş gəldiniz</string>
    <string name="btn_continue">Davam et</string>
    <string name="btn_cancel">Imtina et</string>
    <string name="btn_close">Bağla</string>
    <string name="btn_yes">Bəli</string>
    <string name="btn_edit">Dəyiş</string>
    <string name="btn_no">Xeyir</string>
    <string name="alert_header_login">Giriş məlumatları</string>
    <string name="login_user_incorrect">İstifadəçi adı və ya şifrə yanlışdır</string>
    <string name="internet_error">İnternet bağlantınızı yoxladığdan sonra təkrar cəhd edin</string>
    <string name="server_hour_difference_error">Cihaz tarixi ilə server tarixi fərqlidir </string>
    <string name="server_error">Mərkəz ilə əlaqə qurularkən xəta baş verdi</string>
    <string name="unkown_error">Bilinməyən xəta</string>
    <string name="ip_error">Qeyd edilen IP ünvan yanlışdır</string>
    <string name="refresh_page_header">Məlumatların yüklənilməsi</string>
    <string name="refresh_error_message">Məlumatların yüklənilməsi</string>
    <string name="home_header_text">Gündəlik</string>
    <string name="operation_header_text">Əməliyyatlar</string>
    <string name="order_invoice">Sifariş Fakturası</string>
    <string name="net_sum">Net cəm</string>
    <string name="discount">Endirim</string>
    <string name="client_count">Müştəri sayı</string>
    <string name="gross_sum">Ümumi cəm</string>
    <string name="gross_sum_short">Ü/cəm</string>
    <string name="doc_count">Sənəd sayı</string>
    <string name="cash_code">Kodu</string>
    <string name="cash_onhand">Qalığı</string>
    <string name="cash_in">Mədaxil</string>
    <string name="cash_out">Məxaric</string>
    <string name="items_operation">Məhsul hərəkətləri</string>
    <string name="cash_operation">Pul hərəkətləri</string>
    <string name="other_operation">Digər hərəkətləri</string>
    <string name="op_clients">Müştərilər</string>
    <string name="op_deliver">Çatdırılma</string>
    <string name="op_order">Sifariş</string>
    <string name="op_documents">Sənədlər</string>
    <string name="op_orders">Sifarişlər</string>
    <string name="op_sale">Satış</string>
    <string name="op_return">S/Qaytarma</string>
    <string name="op_visit">Ziyarət</string>
    <string name="op_cash">Kassa</string>
    <string name="op_purches">Alış</string>
    <string name="op_transfer">Transfer</string>
    <string name="orders_details_date">Tarix</string>
    <string name="orders_details_payment_type">Ödəniş Növü</string>
    <string name="payment">Ödəniş</string>
    <string name="client_detail">Müştəri detayı</string>
    <string name="gender">Cinsi*</string>
    <string name="address">Ünvan*</string>
    <string name="address1">Ünvan</string>
    <string name="client_voen">Vöen</string>
    <string name="client_tel">Tel No :</string>
    <string name="code">Kod:</string>
    <string name="debt">Borc</string>
    <string name="risk">Risk</string>
    <string name="name_surname">Ad və Soyadınız*</string>
    <string name="show">Göstər</string>
    <string name="close">Bağla</string>
    <string name="btn_direction">İstiqamət</string>
    <string name="choose_date">Tarix seçimi</string>
    <string name="end_date">Son tarix</string>
    <string name="expire_date">Bitmə tarix</string>
    <string name="expire_date_semicolon">Bitmə/t:</string>
    <string name="start_date">Başlanğıc tarix</string>
    <string name="start_date_semicolon">Başlanğıc/t:</string>
    <string name="error">Xəta</string>
    <string name="understand">Başa düşdüm</string>
    <string name="invoices">Sənədlər</string>
    <string name="sale">Satış</string>
    <string name="order">Sifariş</string>
    <string name="orders">Sifarişlər</string>
    <string name="sale_return">Satış qaytarma</string>
    <string name="receipt_debt">Borc sənədi</string>
    <string name="btn_confirm">Təsdiqlə</string>
    <string name="changes_saved">Dəyişikliklər yadda saxlanılacaq,əminsiniz?</string>
    <string name="information">Məlumat</string>
    <string name="unauthorized">Sizin sessiyanız başa çatmışdır.\nProqrama yenidən giriş edin!</string>
    <string name="no_internet">İnternet bağlantınız yoxdur.Yenidən cəhd edin.</string>
    <string name="get_location_info">Yer məlumatlarını əldə edin!</string>
    <string name="exit">Çıxış</string>
    <string name="get_info">Əldə edin</string>
    <string name="retry">Təkrar</string>
    <string name="language">Dil</string>
    <string name="status_sended">Göndərilmiş</string>
    <string name="status_not_sended">Göndərilməmiş</string>
    <string name="status_error">Xətalı</string>
    <string name="printed">Çap edilmiş</string>
    <string name="printed_not">Çap edilməmiş</string>
    <string name="are_you_sure_log_out">Proqramdan cıxmaq istədiyinizə əminsiniz?</string>
    <string name="data_will_refresh">Məlumatlar yenilənəcək!</string>
    <string name="allgoods">Bütün məhsullar</string>
    <string name="goods">Məhsullar</string>
    <string name="sum">Cəm</string>
    <string name="apply">Tətbiq et</string>
    <string name="date">Tarix</string>
    <string name="clear_filter">Filteri təmizlə</string>
    <string name="apply_filter">Tətbiq et</string>
    <string name="track">İzlə</string>
    <string name="send">Göndər</string>
    <string name="cordinates_found">Kordinatlar tapıldı</string>
    <string name="bank">Bank</string>
    <string name="up_bank">Up Bank Status</string>
    <string name="phonecall">Zəng</string>
    <string name="enable_gps">GPS aktiv edin</string>
    <string name="distance_different">Məsafə uyğunsuzluğu</string>
    <string name="permission_denied">Bu əməliyyat üçün yetkiniz yoxdur</string>
    <string name="track_cordinates">Gəzinti kordinatlar</string>
    <string name="last_seen">Son görünmə</string>
    <string name="cordinate">Kordinat</string>
    <string name="reason">Səbəb</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Default message</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="specious">Xüsusiyyet</string>
    <string name="name">Ad</string>
    <string name="unit">Vahid</string>
    <string name="save_operation">Məlumatlar yadda saxlanılır</string>
    <string name="visit_begindate">Giriş tarixi</string>
    <string name="visit_enddate">Çıxış tarixi</string>
    <string name="begindate_semicolon">Giriş/s: </string>
    <string name="enddate_semicolon">Çıxış/s: </string>
    <string name="minut">Dəq</string>
    <string name="internet">İnternet</string>
    <string name="server_error_header">Bağlantı</string>
    <string name="send_loading_message">Məlumatlar göndərilir...</string>
    <string name="exited">Çıxış edilmiş</string>
    <string name="exited_not">Çıxış edilməmiş</string>
    <string name="settings">Ayarlar</string>
    <string name="error_text">Xəta baş verdi.</string>
    <string name="show_gps_enabled_or_not">GPS bağlıdır</string>
    <string name="get_accessibilty">Əlçatımlılıq</string>
    <string name="get_accessibilty_message">Əlçatımlılıq bölməsində endirilmiş xidməti app üçün aktiv edin</string>
    <string name="refresh">Yenilə</string>
    <string name="dont_refreshed_description">Məlumatlar tam yenilənməyib</string>
    <string name="refreshed_time_description">Məlumatlar yenilənməlidir</string>
    <string name="location_background_permisssion_description">Məkan icazəsini həmişə icazə verin olaraq təyin edin.Bu icazə tətbiqin düzgün işləməsi üçün tələb olunur.</string>
    <string name="give_allow_location_background_permission">İcazə ver</string>
    <string name="set_ignore_battery_optimization">Tətbiqin məhdudiyyətsiz işləməsi üçün batareya optimallaşdırması bağlanmalıdır.</string>
    <string name="batareya_saver">Bağla</string>
    <string name="client_name">Müştəri adı</string>
    <string name="client_name2">Müştəri adı2</string>
    <string name="client_zone">Zona</string>
    <string name="good_extra">Məhsul əlavəsi</string>
    <string name="order_actions">Sifariş hərərkətləri</string>
    <string name="report_filter">Hesabat Filteri</string>
    <string name="report">Hesabat</string>
    <string name="filter">Filter</string>
    <string name="client_code">Müştəri Kodu</string>
    <string name="report_date">Tarix</string>
    <string name="fiche_number">S.nömrəsi</string>
    <string name="exit_balon">Çıx.Balon</string>
    <string name="enter_balon">Gir.Balon</string>
    <string name="report_enter_money">Gir.Pul</string>
    <string name="reports_title">Hesabatlar</string>
    <string name="choose_warehouse">Anbar seçimi</string>
    <string name="responsibility_center_choose">M/mərkəzi seçimi</string>
    <string name="responsibility_center_search">Məsuliyyət mərkəzi axtar</string>
    <string name="choose_project">Proje seçimi</string>
    <string name="proje_search">Proje axtar</string>
    <string name="client_adress">Müştəri ünvanı</string>
    <string name="order_case">Sifariş vəziyyəti</string>
    <string name="document_number">Sənəd nömrəsi</string>
    <string name="document_date">Sənəd tarixi</string>
    <string name="sale_actions">Satış hərəkətləri</string>
    <string name="apply_company">Kampaniyaları tətbiq et</string>
    <string name="appling_campaigns">Kampaniyalar tətbiq edilir</string>
    <string name="exceed_risk_limit">₼ risk limiti aşılır</string>
    <string name="applied_campaign_have_not">Tətbiq olunmuş kampaniya yoxdur.</string>
    <string name="message_for_reset_basket_when_warehouses_changed">Anbar dəyisikliyi zaman səbət sıfırlanacaq</string>
    <string name="message_for_reset_basket_when_category_changed">Kategoriya dəyisikliyi zaman səbət sıfırlanacaq</string>
    <string name="category">Kateqoriya</string>
    <string name="main_group">Əsas Qrup</string>
    <string name="choose_category">Kateqoriya seçimi</string>
    <string name="main_group_catalog">Əsas Kataloq</string>
    <string name="sub_grup_catalog">Alt Kataloq</string>
    <string name="onhand_small_zero_message">Qalıq ödənmir</string>
    <string name="sended_successfully">Bu sənəd uğurla göndərilmişdir.</string>
    <string name="success">Uğurlu</string>
    <string name="success_sended_task">Tapşırıq uğurla əlavə olundu</string>
    <string name="risk_error">Risk Limiti Xətası</string>
    <string name="internet_error_title">Internet xətası</string>
    <string name="onhand_error">Qalıq xətası</string>
    <string name="inspection">Təftiş</string>
    <string name="doc_type">Sənəd növü</string>
    <string name="doc_type_search">Sənəd növü axtar</string>
    <string name="return_buy">Alacaq</string>
    <string name="work_time_is_not_finished">Zəhmət olmasa iş vaxtı bitdikdən sonra cəhd edin</string>
    <string name="salesman_visit">Təmsilçi</string>
    <string name="visit_done_out_rut">Ziyarət edilməyib</string>
    <string name="visit_done">Ziyarət edilib</string>
    <string name="visit_done_not">Rutdan kənar ziyarət edilib</string>
    <string name="all_reports">Bütün reportlar</string>
    <string name="export">Export</string>
    <string name="exporting">Exporting</string>
    <string name="client_search">Müştəri axtar</string>
    <string name="day">Gün</string>
    <string name="action_client">Hərəkət</string>
    <string name="clear">Təmizlə</string>
    <string name="general">Ümumi</string>
    <string name="risk_semicolon">Risk:</string>
    <string name="client_voen_semi_colon">Vöen:</string>
    <string name="navigator_app_choose">Tətbiq seçimi</string>
    <string name="Check">Check</string>
    <string name="scan">Scan</string>
    <string name="settings_nav">Settings</string>
</resources>